prepare for deployment 2

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,9 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="E-Commerce Website Created by Rudy Nurafif"
+      content="Fullstack MERN.js E-Commerce Website Created by Rudy Nurafif"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
+    <!-- Font Awesome untuk Icon -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -17,6 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    
     <title>RAN Shop</title>
   </head>
   <body>
